--- a/templates/addNewClient.html
+++ b/templates/addNewClient.html
@@ -2,37 +2,43 @@
 <html>
 <head>
 	<title>ADD NEW CLIENT</title>
-<!--	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-<!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
-<!--	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
     <style>
     h1
     {
         font-family: calibri;
-		font-size: 40px;
+		font-size: 36px;
 		text-align: center;
     }
     h2
     {
         font-family: calibri;
-		font-size: 25px;
+		font-size: 20px;
 		text-align: left;
     }
     label
     {
 		font-family: calibri;
-		font-size: 15px;
+		font-size: 19.5px;
 		text-align: center;
 		font-weight: normal;
 	}
     form
     {
 
+        flex-wrap: wrap;
         text-align: left;
 		font-weight: normal;
 		font-family: calibri;
     }
+    input
+	{
+		padding: 4.5px;
+		border: 1px solid #ccc;
+		border-radius: 10px;
+		resize: vertical;
+		text-align: left;
+	}
+
      button
     {
     	padding =18px 18px;
@@ -41,6 +47,7 @@
     	font-size: 20px;
     	font-family: calibri;
     	background-color: #8FBC8F;
+    	text-align: center;
     }
     </style>
     <script>
@@ -91,67 +98,59 @@
         if (birthday < newToday)
         {
             document.getElementById("message1").innerHTML = " ";
-            if ( (positive > birthday) || (!positive))
+            if ( ((positive > birthday) && (positive<= newToday)) || (!positive) )
             {
                 document.getElementById("message2").innerHTML = " ";
-                if ( (recovery > checkDays) || ( !recovery ) )
+                if ( ( (recovery > checkDays) && (recovery <= newToday)) || ( !recovery ) )
                 {
                    document.getElementById("message3").innerHTML = " ";
                    document.getElementById("message4").innerHTML = " ";
                    document.getElementById("message4").innerHTML = " ";
                    console.log("vaccine1 good" ,sixFromBDay);
                    console.log(vac1);
-                   if( (!vac1) ||(sixFromBDay <= vac1) )
+                   if( (!vac1) || ( (sixFromBDay <= vac1) && (vac1 <= newToday ))  )
                    {
                          document.getElementById("vaccine1").innerHTML = " ";
-                          console.log("vaccine1 good");
-                         if( (!vac2) || (monthFromVac1 <= vac2) )
+                         console.log("vaccine1 good");
+                         if( (!vac2) || ( (monthFromVac1 <= vac2) && (vac2 <= newToday) ) )
                          {
                             document.getElementById("vaccine2").innerHTML = " ";
-                            if ( (!vac3) || (fiveFromVac2 <= vac3) )
+                            if ( (!vac3) || ( (fiveFromVac2 <= vac3) && (vac3 <= newToday) ) )
                             {
                                 document.getElementById("vaccine3").innerHTML = " ";
-                                if( (!vac4) || (fourFromVac3 <= vac4) )
+                                if( (!vac4) || ((fourFromVac3 <= vac4) && (vac4 <= newToday) ) )
                                 {
                                     document.getElementById("vaccine4").innerHTML = " ";
-                                    if(vac4 <= today)
-                                    {
-                                        document.getElementById("vaccine5").innerHTML = " ";
-                                        return true;
-                                    }
-                                    else
-                                    {
-                                        document.getElementById("vaccine5").innerHTML = "Cant be a future date";
-                                    }
+                                    return true;
                                 }
                                 else
                                 {
-                                    document.getElementById("vaccine4").innerHTML = "Receiving a fourth vaccine is at least four month after receiving the third vaccine";
+                                    document.getElementById("vaccine4").innerHTML = "Receiving a fourth vaccine is at least four month after receiving the third vaccine and can't be a future date";
                                 }
                             }
                             else
                             {
-                                 document.getElementById("vaccine3").innerHTML = "Receiving a third vaccine is at least five month after receiving the second vaccine";
+                                 document.getElementById("vaccine3").innerHTML = "Receiving a third vaccine is at least five month after receiving the second vaccine and can't be a future date";
                             }
                          }
                          else
                          {
-                            document.getElementById("vaccine2").innerHTML = "Receiving a second vaccine is at least one month after receiving the first vaccine";
+                            document.getElementById("vaccine2").innerHTML = "Receiving a second vaccine is at least one month after receiving the first vaccine and can't be a future date";
                          }
                    }
                    else
                    {
-                        document.getElementById("vaccine1").innerHTML = "Receiving first vaccine is at least 6 months after the date of birth";
+                        document.getElementById("vaccine1").innerHTML = "Receiving first vaccine is at least 6 months after the date of birth and can't be a future date";
                    }
                 }
                 else
                 {
-                    document.getElementById("message3").innerHTML = "Invalid date, recovery date should be at least 7 days after the positive date";
+                    document.getElementById("message3").innerHTML = "Invalid date, recovery date should be at least 7 days after the positive date and can't be a future date";
                 }
             }
             else
             {
-                document.getElementById("message2").innerHTML = "Invalid date, positive covid date can't be before birthday";
+                document.getElementById("message2").innerHTML = "Invalid date, positive covid date can't be before birthday and can't be a future date";
             }
         }
         else
@@ -165,9 +164,7 @@
 </head>
 <body>
     <h1>Add new client to HMO</h1>
-    <h2 >please fill in the client's details:</h2>
 	<div class="jumbotron">
-
         <form class="form-group" onsubmit="return check()" action="/addNewClient" method="post">
             <label>First name</label>
             <input type="text" id="namee" name="fname" class="form-control" required pattern="[A-Za-z]*" title="name contain only letters" ><br>
@@ -189,13 +186,12 @@
             <label>Covid Positive Date</label>
             <input type="date" id="positiveDate" name="positiveDate" class="form-control">
             <span id="message2" style="color:red"></span><br>
-
             <label>Covid Recovery Date</label>
             <input type="date" id="recoveryDate" name="recoveryDate" class="form-control">
-            <span id="message3" style="color:red"></span><br>
+            <span id="message3" style="color:red"></span>
             <span id="message4" style="color:red"></span><br>
 
-            <label>get first vaccine?</label>
+            <label>Get first vaccine?</label>
             <input type="radio" name ="get1" value="Yes"/>Yes
             <input type="radio" name ="get1" value="No" checked/>No<br>
 
@@ -205,11 +201,11 @@
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
             </select>
-            <label>get vaccine Date</label>
-             <input type="date" id="vacD1" name="vaccineDate1"  class="form-control"><br>
+            <label>Date</label>
+             <input type="date" id="vacD1" name="vaccineDate1"  class="form-control">
             <span id="vaccine1" style="color:red"></span><br>
 
-            <label>get second vaccine?</label>
+            <label>Get second vaccine?</label>
             <input type="radio" name ="get2" value="Yes"/>Yes
             <input type="radio" name ="get2" value="No" checked/>No<br>
 
@@ -220,11 +216,11 @@
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
             </select>
-            <label>get vaccine Date</label>
-            <input type="date" id="vacD2" name="vaccineDate2"  class="form-control"><br>
+            <label>Date</label>
+            <input type="date" id="vacD2" name="vaccineDate2"  class="form-control">
             <span id="vaccine2" style="color:red"></span><br>
 
-            <label>get third vaccine?</label>
+            <label>Get third vaccine?</label>
             <input type="radio" name ="get3" value="Yes"/>Yes
             <input type="radio" name ="get3" value="No" checked/>No<br>
 
@@ -235,11 +231,11 @@
                 <option value="AstraZeneca">AstraZeneca</option>
             </select>
 
-            <label>get vaccine Date</label>
-            <input type="date" id="vacD3" name="vaccineDate3"  class="form-control"><br>
+            <label>Date</label>
+            <input type="date" id="vacD3" name="vaccineDate3"  class="form-control">
             <span id="vaccine3" style="color:red"></span><br>
 
-            <label>get fourth vaccine?</label>
+            <label>Get fourth vaccine?</label>
             <input type="radio" name ="get4" value="Yes"/>Yes
             <input type="radio" name ="get4" value="No" checked/>No<br>
 
@@ -249,19 +245,19 @@
                 <option value="Moderna">Moderna</option>
                 <option value="AstraZeneca">AstraZeneca</option>
             </select>
-            <label>get vaccine Date</label>
-            <input type="date" id="vacD4" name="vaccineDate4"  class="form-control"><br>
-
-            <span id="vaccine4" style="color:red"></span><br>
+            <label>Date</label>
+            <input type="date" id="vacD4" name="vaccineDate4"  class="form-control">
+            <span id="vaccine4" style="color:red"></span>
             <span id="vaccine5" style="color:red"></span><br>
 			<button class="btn btn-primary" type="submit" name="submit" value="add">Submit</button>
+             <div>
+             {{failure}}
+            </div>
 		</form>
 
 	</div>
 
-    <div>
-          {{failure}}
-    </div>
+
 
 </body>
 </html>
